--- a/AirHockeyApp/MainPage.xaml
+++ b/AirHockeyApp/MainPage.xaml
@@ -5,10 +5,21 @@
     xmlns:local="using:AirHockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Background="#FFC913C9">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="_button1" Content="כפתור" HorizontalAlignment="Left" Margin="111,350,0,0" VerticalAlignment="Top" Click="button_Click" FontSize="20pt" Height="100" Width="151"/>
+    <Grid  x:Name="grid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" BorderBrush="#FFC913C9" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="83*"/>
+            <RowDefinition Height="45*"/>
+        </Grid.RowDefinitions>
+        <Popup Grid.RowSpan="2">
+            <Grid Background="#FFE5E5E5" Height="100" Width="100">
 
+
+            </Grid>
+        </Popup>
+        <Button x:Name="_btn1" Content="Is Amit Gay ??" HorizontalAlignment="Left" Margin="70,374,0,0" VerticalAlignment="Top" Click="button_Click" FontSize="32" Grid.RowSpan="2"/>
+        <TextBlock x:Name="_tb1" HorizontalAlignment="Left" Margin="10,234,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Comic Sans MS" FontSize="30.333" Width="350"/>
     </Grid>
+
 </Page>
