--- a/AirHockeyApp/ScoreBoard.xaml
+++ b/AirHockeyApp/ScoreBoard.xaml
@@ -5,12 +5,11 @@
     xmlns:local="using:AirHockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    
     mc:Ignorable="d">
-    
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-       
 
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ListBox x:Name="_lbPlayers" HorizontalAlignment="Left" Height="400" ItemsSource="{Binding Players}" DisplayMemberPath="Name" 
+                  Margin="77,167,0,0" VerticalAlignment="Top" Width="200"/>
 
     </Grid>
 </Page>
