--- a/AirHockeyApp/Amit.xaml
+++ b/AirHockeyApp/Amit.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="AirHockeyApp.MainPage"
+    x:Class="AirHockeyApp.Amit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AirHockeyApp"
