--- a/AirHockeyApp/ScoreBoard.xaml
+++ b/AirHockeyApp/ScoreBoard.xaml
@@ -8,6 +8,26 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBlock Margin="104,0,-104,0">
+            <TextBlock.RenderTransform>
+                <TranslateTransform x:Name="translate" />
+            </TextBlock.RenderTransform>
+            <TextBlock.Triggers>
+                
+                <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                    <BeginStoryboard>
+                        <Storyboard RepeatBehavior="Forever">
+                            <DoubleAnimation 
+                                From="500" To="-500" 
+                                Storyboard.TargetName="translate" 
+                                Storyboard.TargetProperty="X"
+                                Duration="0:0:10" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </TextBlock.Triggers>
+            Robot Air Hockey
+        </TextBlock>
         <ListBox x:Name="_lbPlayers" HorizontalAlignment="Left" Height="400" ItemsSource="{Binding Players}" DisplayMemberPath="Name" 
                   Margin="77,167,0,0" VerticalAlignment="Top" Width="200"/>
 
