--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -8,6 +8,16 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+       <Grid>
+           <Grid.RowDefinitions>
+                <RowDefinition Height="5*"></RowDefinition>
+               <RowDefinition Height="20*"></RowDefinition>
+               <RowDefinition Height="70*"></RowDefinition>
+               <RowDefinition Height="5*"></RowDefinition>
+           </Grid.RowDefinitions>
+           
+          
+            
+        </Grid>
     </Grid>
 </Page>
