--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -5,19 +5,31 @@
     xmlns:local="using:HockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    FontFamily="Arial"
+    Foreground="White"
+    FontSize="24pt">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-       <Grid>
-           <Grid.RowDefinitions>
-                <RowDefinition Height="5*"></RowDefinition>
-               <RowDefinition Height="20*"></RowDefinition>
-               <RowDefinition Height="70*"></RowDefinition>
-               <RowDefinition Height="5*"></RowDefinition>
-           </Grid.RowDefinitions>
-           
-          
-            
+        <Grid Background="Black">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="128"></RowDefinition>
+                <RowDefinition Height="14*"></RowDefinition>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text="Up"></TextBlock>
+            <TextBlock x:Name="lowerPadding" Grid.Row ="3" Text="Down"></TextBlock>
+            <Image x:Name="logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="0,0,0,0"/>
+            <Canvas Grid.Row="2">
+                <Canvas.Resources>
+                    
+                </Canvas.Resources>
+                <Button x:Name="BtnGame" Content="התחל משחק" Height="100" Width="250" 
+                        Foreground="#FFCD2323" FontWeight="Bold" Canvas.Left="50" Canvas.Top="50" HorizontalAlignment="Center" BorderBrush="White"></Button>
+                <Button x:Name="BtnScoreBoard" Content="התחל משחק" Height="100" Width="250" 
+                        Foreground="#FFCD2323" FontWeight="Bold" Canvas.Left="50" Canvas.Top="220" HorizontalAlignment="Center" BorderBrush="White"></Button>
+            </Canvas>
         </Grid>
     </Grid>
 </Page>
