--- a/HockeyApp/StartGamePage.xaml
+++ b/HockeyApp/StartGamePage.xaml
@@ -1,21 +1,45 @@
 ﻿<Page
     x:Class="HockeyApp.StartGamePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    FontFamily="Arial"
+    Foreground="White"
+    FontSize="24pt">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel x:Name="contentPanel" Margin="8,32,0,0">
-            <TextBlock Text="Air Hockey App" Margin="0,0,0,40"/>
-            <TextBlock Text="Please enter your full name:"/>
-            <StackPanel x:Name="inputPanel" Orientation="Horizontal" Margin="0,20,0,20">
-                <TextBox x:Name="nameInput" Width="280" HorizontalAlignment="Left"/>
-                <Button x:Name="inputButton" Content="Submit" Click="ButtonClick"/>
+        <Grid Background="Black">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="128"></RowDefinition>
+                <RowDefinition Height="14*"></RowDefinition>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text="Up"></TextBlock>
+            <TextBlock x:Name="lowerPadding" Grid.Row ="3" Text="Down"></TextBlock>
+            <Image x:Name="logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="0,0,0,0"/>
+            <StackPanel x:Name="NamePanel" Grid.Row="2">
+                <TextBlock Text="Air Hockey App" Margin="0,0,0,40"/>
+                <TextBlock Text="Please enter your full name:"/>
+                <StackPanel x:Name="inputPanel" Orientation="Vertical" Margin="0,20,0,20" HorizontalAlignment="Center">
+                    <TextBox x:Name="nameInput" Width="280" HorizontalAlignment="Left"/>
+                    <Button x:Name="inputButton" FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot" Margin="0,15,0,0" Content="Submit" Click="ButtonClick" Height="40"
+                    	Foreground="#FFCD2323" FontWeight="Bold" HorizontalAlignment="Center" FontSize="42.667"/>
+                </StackPanel>
             </StackPanel>
-            <TextBlock x:Name="greetingOutput"/>
-        </StackPanel>
+            <Canvas x:Name="ChooseTimeOrScore" Grid.Row="2" Visibility="Collapsed">
+                <Canvas.Resources>
+
+                </Canvas.Resources>
+                <TextBlock x:Name="greetingOutput"/>
+                <Button x:Name="BtnGame" Content="Limit by Time" Height="100" Width="250" 
+                        Foreground="#FFCD2323" FontWeight="Bold" Canvas.Left="50" Canvas.Top="50" HorizontalAlignment="Center" BorderBrush="White"></Button>
+                <Button x:Name="BtnScoreBoard" Content="Limit by Score" Height="100" Width="250" 
+                        Foreground="#FFCD2323" FontWeight="Bold" Canvas.Left="50" Canvas.Top="220" HorizontalAlignment="Center" BorderBrush="White"></Button>
+            </Canvas>
+        </Grid>
     </Grid>
 </Page>
