--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     FontFamily="Arial"
     Foreground="White"
-    FontSize="24">
+    FontSize="24pt">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Background="Black">
