--- a/HockeyApp/App.xaml
+++ b/HockeyApp/App.xaml
@@ -14,7 +14,7 @@
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontSize" Value="42.667" />
-            <Setter Property="BorderBrush" Value="White" />
+            <!--<Setter Property="BorderBrush" Value="White" />-->
         </Style>
     </Application.Resources>
 </Application>
