--- a/HockeyApp/App.xaml
+++ b/HockeyApp/App.xaml
@@ -7,14 +7,23 @@
 
     <Application.Resources>
         <Style TargetType="Button" x:Key="RedButton">
-            <Setter Property="FontFamily" Value="Assets/QuirkyRobot.ttf#QuirkyRobot"/>
+            <Setter Property="FontFamily" Value="Assets/QuirkyRobot.ttf#QuirkyRobot" />
             <Setter Property="Padding" Value="8,16,8,0" />
             <Setter Property="Foreground" Value="Red" />
-            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontSize" Value="42.667" />
             <!--<Setter Property="BorderBrush" Value="White" />-->
+        </Style>
+        
+        <Style TargetType="TextBlock" x:Key="RedTextBlock">
+            <Setter Property="FontFamily" Value="Assets/digital-7.ttf#Digital-7" /> 
+            <Setter Property="Foreground" Value="Red" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="FontSize" Value="42.667" />
+            <Setter Property="VerticalAlignment"  Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
         </Style>
     </Application.Resources>
 </Application>
