--- a/HockeyApp/Game.xaml
+++ b/HockeyApp/Game.xaml
@@ -10,22 +10,37 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Background="Black">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="128"></RowDefinition>
-                <RowDefinition Height="14*"></RowDefinition>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition Height="128" />
+                <RowDefinition Height="14*" />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text=""></TextBlock>
-            <TextBlock x:Name="lowerPadding" Grid.Row ="3" Text=""></TextBlock>
-            <Image x:Name="logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
-            <Grid Grid.Row="2" >
+            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text="" />
+            <TextBlock x:Name="lowerPadding" Grid.Row="3" Text="" />
+            <Image x:Name="logo" Grid.Row="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch"
+                   Margin="5,0,0,0" />
+            <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <TextBlock x:Name="textBlock" Grid.Row="0" Canvas.Left="43" TextWrapping="Wrap" Text="TextBlock" Canvas.Top="59" Height="97" Width="281"/>
-                <Grid Grid.Row="1" Margin="20,0,20,0" >
+                
+                    <!--<c4FToolkit:TimeSpanPicker   x:Name="timeSpan" Value="0" HorizontalAlignment="Center"/>--> 
+                <TextBlock x:Name="tb_Timer" Grid.Row="0"  Text="TextBlock" Height="97" Width="281" Style="{StaticResource  RedTextBlock}">
+                    <TextBlock.Resources>
+                        <Storyboard x:Name="myStoryboard">
+                        <!-- Animate the background color of the canvas from red to green over 4 seconds. -->
+                            <ColorAnimation Storyboard.TargetName="mySolidColorBrush"
+                                Storyboard.TargetProperty="Color"
+                                From="Red" To="Green" Duration="0:0:4" />
+                        </Storyboard>
+                    </TextBlock.Resources>
+                    <TextBlock.Foreground>
+                        <SolidColorBrush x:Name="mySolidColorBrush" Color="Red"></SolidColorBrush>
+                    </TextBlock.Foreground>
+                </TextBlock>
+                <Grid Grid.Row="1" Margin="20,0,20,0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="27*" />
                         <RowDefinition Height="73*" />
@@ -36,23 +51,31 @@
                     </Grid.ColumnDefinitions>
                     <Border Grid.Row="0" Grid.Column="0" BorderBrush="Red" BorderThickness="3" />
                     <Border Grid.Row="0" Grid.Column="1" BorderBrush="Red" BorderThickness="3" />
-                    <Border Grid.Row="1" Grid.Column="0" BorderBrush="Red" BorderThickness="3"  />
+                    <Border Grid.Row="1" Grid.Column="0" BorderBrush="Red" BorderThickness="3" />
                     <Border Grid.Row="1" Grid.Column="1" BorderBrush="Red" BorderThickness="3" />
-                    <TextBlock x:Name="Robot" Grid.Row ="0" Grid.Column="1" TextWrapping="Wrap"  Width="145" Foreground="#FF1F00E4" FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot" 
-                               FontSize="48" TextAlignment="Center" Margin="5" Grid.RowSpan="2" >
-                    	<Run FontSize="40" Text="Robot" />
+                    <TextBlock x:Name="Robot" Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Width="145"
+                               Foreground="#FF1F00E4" FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot"
+                               FontSize="48" TextAlignment="Center" Margin="5" Grid.RowSpan="2">
+                        <Run FontSize="40" Text="Robot" />
                     </TextBlock>
-                    <TextBlock x:Name="UserScore" Grid.Row ="1" Grid.Column="0"   Text="3"  Width="145" Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7" TextAlignment="Center"  />
-                    <TextBlock x:Name="RobotScore" Grid.Row ="1" Grid.Column="1"  Text="5"  Width="145" Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7" TextAlignment="Center" />
-                    <TextBlock x:Name="User" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap"  Width="145" Foreground="#FF1F00E4" 
-                               FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot" FontSize="40" TextAlignment="Center" Text="User" 
-                               Margin="5"  />
+                    <TextBlock x:Name="UserScore" Grid.Row="1" Grid.Column="0" Text="3" Width="145"
+                               Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
+                               TextAlignment="Center" />
+                    <TextBlock x:Name="RobotScore" Grid.Row="1" Grid.Column="1" Text="5" Width="145"
+                               Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
+                               TextAlignment="Center" />
+                    <TextBlock x:Name="User" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Width="145"
+                               Foreground="#FF1F00E4"
+                               FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot" FontSize="40" TextAlignment="Center"
+                               Text="User"
+                               Margin="5" />
                 </Grid>
                 <!--<Image x:Name="scoreTable" Grid.Row ="1" Source="Assets/ScoreTable.PNG" HorizontalAlignment="Stretch" Canvas.Left="43" Canvas.Top="211"/>-->
-                
-                <Button x:Name="PuseButton"  HorizontalAlignment="Stretch" Margin="140,0,118,10" Grid.Row="2" VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition" Height="75">
+
+                <Button x:Name="PuseButton" HorizontalAlignment="Stretch" Margin="140,0,118,10" Grid.Row="2"
+                        VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition" Height="75">
                     <Button.Background>
-                        <ImageBrush Stretch="Fill" ImageSource="Assets/pouseButton.png"/>
+                        <ImageBrush Stretch="Fill" ImageSource="Assets/pouseButton.png" />
                     </Button.Background>
                 </Button>
             </Grid>
