--- a/HockeyApp/StartGamePage.xaml
+++ b/HockeyApp/StartGamePage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Class="HockeyApp.StartGamePage"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,32 +13,36 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Background="Black">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="128"></RowDefinition>
-                <RowDefinition Height="14*"></RowDefinition>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition Height="128" />
+                <RowDefinition Height="14*" />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text=""></TextBlock>
-            <TextBlock x:Name="lowerPadding" Grid.Row ="3" Text=""></TextBlock>
-            <Image x:Name="logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
+            <TextBlock x:Name="UpperPadding" Grid.Row="0" Text="" />
+            <TextBlock x:Name="lowerPadding" Grid.Row="3" Text="" />
+            <Image x:Name="logo" Grid.Row="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch"
+                   Margin="5,0,0,0" />
             <StackPanel x:Name="NamePanel" Grid.Row="2">
-                
-                <TextBlock Text="Please enter your full name:" HorizontalAlignment="Center" FontFamily="Global Monospace" FontSize="18.667"/>
+
+                <TextBlock Text="Please enter your full name:" HorizontalAlignment="Center"
+                           FontFamily="Global Monospace" FontSize="18.667" />
                 <StackPanel x:Name="inputPanel" Orientation="Vertical" Margin="0,20,0,20" HorizontalAlignment="Center">
-                    <TextBox x:Name="nameInput" Width="280" HorizontalAlignment="Left" Text="" PlaceholderText="Enter Your Name Here."  TextChanging="NameInput_OnTextChanging"/>
-                    <Button x:Name="inputButton" Style="{StaticResource RedButton}" Content="Submit" Click="ButtonClick" Margin="0,15,0,0"
-                    	IsEnabled="False"/>
+                    <TextBox x:Name="nameInput" Width="280" HorizontalAlignment="Left" Text=""
+                             PlaceholderText="Enter Your Name Here." TextChanging="NameInput_OnTextChanging" />
+                    <Button x:Name="inputButton" Style="{StaticResource RedButton}" Content="Submit"
+                            Click="ButtonClick" Margin="0,15,0,0"
+                            IsEnabled="False" />
                 </StackPanel>
             </StackPanel>
             <Canvas x:Name="ChooseTimeOrScore" Grid.Row="2" Visibility="Collapsed">
                 <Canvas.Resources>
 
                 </Canvas.Resources>
-                <TextBlock x:Name="tb_greetingOutput"/>
+                <TextBlock x:Name="tb_greetingOutput" />
                 <Button x:Name="btn_byTime" Style="{StaticResource RedButton}" Content="Limit by Time"
-                        Canvas.Left="50" Canvas.Top="50" BorderBrush="White" Click="BtnOption_OnClick" ></Button>
+                        Canvas.Left="50" Canvas.Top="50" BorderBrush="White" Click="BtnOption_OnClick" />
                 <Button x:Name="btn_byScore" Style="{StaticResource RedButton}" Content="Limit by Score"
-                        Canvas.Left="50" Canvas.Top="220" BorderBrush="White" Click="BtnOption_OnClick"></Button>
+                        Canvas.Left="50" Canvas.Top="220" BorderBrush="White" Click="BtnOption_OnClick" />
             </Canvas>
         </Grid>
     </Grid>
